--- a/frances-emart-web-ui/src/app/shopping/order/order.component.html
+++ b/frances-emart-web-ui/src/app/shopping/order/order.component.html
@@ -1,23 +1,23 @@
 <div class="modal-body">
-    <div class="row overflow-auto">
+    <div *ngFor="let line of order.lines" class="row overflow-auto">
         <div class="col-4 text-center">
             <img width="150" height="150"
-                src="https://m.360buyimg.com/babel/jfs/t1/95633/33/17857/78654/5e8d8bacE783de38c/33975329b96c3638.jpg!q70.jpg"
+                [src]="line.thumbnail"
                 alt="..." class="img-thumbnail">
         </div>
         <div class="col-8">
-            <p>Item Name + Descripton</p>
-            <p>Qulity</p>
-            <p>Seller Name</p>
-            <p>Total</p>
+            <p>{{line.itemId | slice:24}}</p>
+            <p>{{line.itemName}}</p>
+            <p>{{line.quantity}}</p>
+            <p>{{line.price*line.quantity | currency:'CNY'}}</p>
         </div>
     </div>
     <div class="row">
         <div class="col text-right mr-3">
-            <p>Order#: 120032</p>
-            <p>Total tax: $10</p>
-            <p>Discount: 5%</p>
-            <p>Total: $456</p>
+            <p>Order#: {{order.id | slice:24}}</p>
+            <p>Total tax: {{order.totalTax | currency:'CNY'}}</p>
+            <p>Discount: {{order.discountPercent}}%</p>
+            <p>Total: {{order.total |  currency:'CNY'}}}</p>
         </div>
     </div>
 </div>
