--- a/frances-emart-web-ui/src/app/shopping/shopping-cart/shopping-cart.component.html
+++ b/frances-emart-web-ui/src/app/shopping/shopping-cart/shopping-cart.component.html
@@ -18,24 +18,24 @@
             </div>
         </div>
 
-        <div class="row mt-3">
+        <div *ngFor="let item of cart.items | keyvalue" class="row mt-3">
             <div class="col-3 text-center ">
                 <img width="100" height="100"
-                    src="https://m.360buyimg.com/babel/jfs/t1/95633/33/17857/78654/5e8d8bacE783de38c/33975329b96c3638.jpg!q70.jpg"
+                    [src]="item.value.thumbnail"
                     alt="..." class="img-thumbnail">
 
             </div>
             <div class="col-3  text-center my-auto">
-                <div>IphoneX11</div>
+                <div>{{item.value.itemName}}</div>
             </div>
             <div class="col-2 text-center my-auto">
-                <input type="number" value="1" class="form-control">
+                <input type="number" min="1"  (change)="onQuantityChange($event, item.value.id)" [(value)]="item.value.quantity" class="form-control">
             </div>
             <div class="col-2 text-center my-auto" length="3">
-                <h6>$500</h6>
+                <h6>{{item.value.price | currency:'CNY'}}</h6>
             </div>
             <div class="col-2 text-center my-auto">
-                <svg class="bi bi-trash" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
+                <svg (click)="removeItem(item.value)" class="bi bi-trash" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor"
                     xmlns="http://www.w3.org/2000/svg">
                     <path
                         d="M5.5 5.5A.5.5 0 016 6v6a.5.5 0 01-1 0V6a.5.5 0 01.5-.5zm2.5 0a.5.5 0 01.5.5v6a.5.5 0 01-1 0V6a.5.5 0 01.5-.5zm3 .5a.5.5 0 00-1 0v6a.5.5 0 001 0V6z" />
@@ -49,24 +49,26 @@
     <div class="container">
         <div class="row mt-5">
             <div class="col ml-4">
-                Total tax: $100
+                Total tax: {{totalTax | currency:'CNY'}}
+            </div>
+        </div>
+        <div *ngIf="discounts.length!==0" class="row mt-2">
+            <div class="col ml-4">
+                <label class="mr-2" for="discount">Apply Discount:{{currentPercent}}%</label> 
+                <select class="mr-3" id="discount" #d (change)="onChangeDiscount(d)">
+                    <option value="">Select Discount</option>>
+                    <option *ngFor="let discount of discounts" (value)="discount.code">{{discount.code | slice:24}}</option>
+                </select>
             </div>
         </div>
         <div class="row mt-2">
             <div class="col ml-4">
-                <label class="mr-2" for="discount">Apply Discount: 10% </label> <select class="mr-3" id="discount">
-                    <option>XDJFDF</option>>
-                </select> <button class="btn btn-primary">Apply</button>
-            </div>
-        </div>
-        <div class="row mt-2">
-            <div class="col ml-4">
-                <div>Total: $456</div>
+                <div>Total: {{total | currency:'CNY'}}</div>
             </div>
         </div>
         <div class="row mt-2">
             <div class="col ml-4 text-right">
-                <button class="btn btn-primary">Check Out</button>
+                <button (click)="onCheckout()" class="btn btn-primary">Check Out</button>
             </div>
         </div>
     </div>
