--- a/frances-emart-web-ui/src/app/shopping/shopping-header/shopping-header.component.html
+++ b/frances-emart-web-ui/src/app/shopping/shopping-header/shopping-header.component.html
@@ -13,5 +13,5 @@
                 <span *ngIf="menu.value.isActive" class="sr-only">(current)</span></a>
         </div>
     </div>
-    <div>Weclome, username <a [routerLink]="['/logout']" class="badge text-light">Logout</a></div>
+    <div>Weclome, {{username}} <a [routerLink]="['/logout']" class="badge text-light">Logout</a></div>
 </nav>
